    2. Re-organize room definition.
    3. Fix the problem backend message pushing would cause collecting failure.
    4. Add CD/JV code.
2019-12-18
    1. Fix bug that add/del site not to trigger re-collect.
2020-01-07
    1. Fix bug that conf change would cause some platforms not checked again.
2020-05-12
    1. Fix the problem loop when check vm is starting if vm cannot be started.
    2. Change PM passwd.
2020-05-15
    1. Support Chinese in desc/owner.
2020-05-29
    1. Add tty change function.
    2. Add restart mmi/node function.
2020-06-01
    1. Fix bug that no platform insert if validate from conf is null.
    2. Adjust parameter for muti visit to database, add a loop to update database.
    3. Collapse platform page.
    4. Display a interval timer for restart node.
    5. Prompt more info for display page.
    6. Only start/stop node, no mmi more.
    7. Add Restarting flag for node.
    8. Optimise the logic to update a node.
2020-06-02
    1. Update the room name of jv.
    2. Delete console log in js file.
2020-06-03
    1. Update the start/stop scripts.
    2. Enable to change display for shutdown vm.
    3. Enable the availability display for platform list.
    4. Enable to delete display node.
2020-06-04
    1. Add header for all pages.
    2. Add current time/total pf display in backend page.
    3. Fix bug that collecting crash if dm Node name != Host name.
2020-06-05
    1. Fix bug if someone start vm between pm and vm collection, vm would be shutdown by this tool.
2020-06-09
    1. Enable display node change from pm if the server could not reach vm.
    2. Add timeout for exec cmd  to avoid stuck if someone shut down vm after ssh established.
    3. Adjust some trace info.
2020-06-10
    1. Fix bug that some str not convert to unicode if muti pf changed.
    2. Fix bug empty date would cause submit platform failure.
    3. Fix bug pf with empty date is a used pf.
    4. Fix bug when restart the display is empty.