@@ -121,7 +121,7 @@
                         <tbody>
                             {%  for item in pf.nodes %}
                             <tr id={{ forloop.counter }} onmouseover="this.style.backgroundColor='#ffff66';" onmouseout="altRow(this)">
-                            <td class='itemvalue'>{{item.Name}}</td>
+                            <td class='itemvalue platform-node-name'>{{item.Name}}</td>
                             <!--<td class='itemvalue'>{{item.Os}}</td>-->
                             <td class='itemvalue'>{{item.OPS_Name}}</td>
                             <!--<td class='itemvalue'>{{item.Structure}}</td>-->
